tests/ui/coercion/coerce-issue-49593-box-never.fallback.stderr
error[E0277]: the size for values of type `(dyn std::error::Error + 'static)` cannot be known at compilation time
  --> $DIR/coerce-issue-49593-box-never.rs:30:5
   |
LL |     d as *mut _
   |     ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn std::error::Error + 'static)`
   = note: required for the cast from `*mut (dyn std::error::Error + 'static)` to `*mut (dyn std::error::Error + 'static)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
